# tgcrypto-rs

./: .gitignore  Cargo.toml  MANIFEST.in  README.md  README_OPTIMIZED.md  pyproject.toml  tagger.py  tgcrypto.pyi
.github/workflows/: release.yaml  release.yml  wheels.yml
benches/: crypto_bench.rs
src/: aes.rs  factorization.rs  lib.rs  mtproto.rs  rsa.rs  sha.rs
tests/: integration.rs
