[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "tgcrypto-rs"
version = "2.1.5"
description = "Rust-based TgCrypto module for Pyrogram"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "LGPL-3.0-or-later" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.maturin]
include = ["COPYING*", "NOTICE"]
features = ["pyo3/extension-module"]
